--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-[Ll]ibrary/
-[Tt]emp/
-[Oo]bj/
-[Bb]uild/
-[Bb]uilds/
-[Ll]ogs/
+Library
+Temp
+Obj
+Build
+Builds
+Logs
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
-# [Aa]ssets/AssetStoreTools*
+ [Aa]ssets/AssetStoreTools*
 
 # Visual Studio cache directory
 .vs/
